welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:24: error: type YELLOW is not a member of object java.awt.Color
    case 1 => getCouleurBrosse():Color.YELLOW
                                       ^MethodsPicture:25: error: type RED is not a member of object java.awt.Color
    case 2 => getCouleurBrosse():Color.RED
                                       ^MethodsPicture:26: error: type BLUE is not a member of object java.awt.Color
    case 3 => getCouleurBrosse():Color.BLUE
                                       ^MethodsPicture:27: error: type GREEN is not a member of object java.awt.Color
    case 4 => getCouleurBrosse():Color.GREEN
                                       ^